Fixed carousel border, centered item pages, added spacing

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -11,3 +11,7 @@
   background-color: $semi-dark-green;
   color: white;
 }
+
+#carouselExampleIndicators {
+  border:10px solid $lighter-green;
+}
